latex: Prvy nastrel uvodu do bakalarky
Signed-off-by: Filip Lobpreis <f.lobpreis@gmail.com>

--- a/example_URK.tex
+++ b/example_URK.tex
@@ -5,19 +5,19 @@
 %  - dizp - Dissertation thesis
 %  - sp   - Seminar paper
 % Argument `tnr` selects the Times New Roman font, which is required by URK FEI STU
-\documentclass[dp, tnr]{FEIstyle}
+\documentclass[bp, tnr, utf8]{FEIstyle}
 % \documentclass[dp, tnr, en]{FEIstyle} % If you want to write the thesis in English, add the argument `en`
 
-% Fill in your name, thesis title and details 
-\FEIauthor{Bc. Ján Srnec}
-\FEItitle{Ukážkový \LaTeX\ dokument s dlhým názvom}
-\FEItitleEn{Example \LaTeX\ document with long title}
+% Fill in your name, thesis title and details
+\FEIauthor{Filip Lobpreis}
+\FEItitle{Vytvorenie Ovládača v prostredí ROS pre mobilného robota}
+\FEItitleEn{Implementation of ROS Driver for Mobile Robot}
 \FEIkeywords{kľúčové slovo1, kľúčové slovo2, kľúčové slovo3}
-\FEIkeywordsEn{keyword1, keyword2, keyword3}
-\FEIregNr{FEI-xxxx-xxxx}
-\FEIsupervisor{Mgr. Ing. Peter Párker, PhD.}
-\FEIconsultant{Ing. John Doe}
-\FEIdate{15}{5}{2021} % Date of submission (Day, month, year)
+\FEIkeywordsEn{ROS, BlackMetal}
+\FEIregNr{FEI-100863-111124}
+\FEIsupervisor{Ing. Michal Dobiš}
+\FEIconsultant{Ing. Michal Dobiš}
+\FEIdate{02}{06}{2023} % Date of submission (Day, month, year)
 \FEIstudyProgramme{Robotika a kybernetika}
 \FEIstudyProgrammeEn{Robotics and cybernetics}
 \FEItrainingWorkplace{\a'Ustav robotiky a kybernetiky}
@@ -36,7 +36,7 @@
 \FEIpdfInfo
 \FEIcover
 \FEItitlePage
-% \FEIassignment{includes/assignment.jpeg}
+\FEIassignment{includes/ZadanieBakalarky.png}
 % \FEIassignment{includes/assignment_part2.jpeg}
 \FEIabstract{includes/abstract}
 \FEIabstractEn{includes/abstractEN}
@@ -65,3 +65,4 @@
 \FEIappendix{Algoritmus\label{att:B}}{includes/attachmentB}
 \FEIappendix{Výpis sublime\label{att:C}}{includes/attachmentC}
 \end{document}
+
