--- a/includes/glossary.tex
+++ b/includes/glossary.tex
@@ -1,4 +1,3 @@
-\newacronym{sw}{SW}{Star Wars}
-\newacronym{hw}{HW}{Halo Wars}
-\newacronym{cdma}{CDMA}{Code Division Multiple Access} 
-\newacronym{gsm}{GSM}{Global System for Mobile communication}
+\newacronym{ROS}{ROS}{Robot Operating System}
+\newacronym{IPC}{IPC}{Inter Process Communication}
+\newacronym{LAN}{LAN}{Local Area Network}
