assignment: load the assignment
Signed-off-by: Filip Lobpreis <f.lobpreis@gmail.com>

--- a/example_URK.tex
+++ b/example_URK.tex
@@ -36,7 +36,7 @@
 \FEIpdfInfo
 \FEIcover
 \FEItitlePage
-\FEIassignment{includes/ZadanieBakalarky.png}
+\FEIassignment{img/ZadanieBakalarky.png}
 % \FEIassignment{includes/assignment_part2.jpeg}
 \FEIabstract{includes/abstract}
 \FEIabstractEn{includes/abstractEN}
