--- a/includes/bibliography.bib
+++ b/includes/bibliography.bib
@@ -1,7 +1,7 @@
 %% This BibTeX bibliography file was created using BibDesk.
 %% http://bibdesk.sourceforge.net/
 
-%% Saved with string encoding Unicode (UTF-8) 
+%% Saved with string encoding Unicode (UTF-8)
 
 @ONLINE{lipsum,
   title = {{Lorem Ipsum}},
@@ -9,41 +9,47 @@
   urldate = {2020-11-30}
 }
 
+@ONLINE{comparison,
+  title = {{ROS2 from the Ground Up}},
+  url = {https://medium.com/@nullbyte.in/ros2-from-the-ground-up-part-1-an-introduction-to-the-robot-operating-system-4c2065c5e032},
+  urldate = {2022-12-23}
+}
+
 @ONLINE{t00,
   editor = {Bratková, Eva},
   editortype={compiler},
-  title =  {Metody citování literatury a strukturování bibliografických záznamů podle mezinárodních norem ISO 690 a ISO 690-2}, 
-  subtitle = {metodický materiál pro autory vysokoškolských kvalifikačních prací}, edition = {Verze 2.0, aktualiz. a rozšíř.}, 
+  title =  {Metody citování literatury a strukturování bibliografických záznamů podle mezinárodních norem ISO 690 a ISO 690-2},
+  subtitle = {metodický materiál pro autory vysokoškolských kvalifikačních prací}, edition = {Verze 2.0, aktualiz. a rozšíř.},
   location = {Praha},
   publisher = {Odborná komise pro otázky elektronického zpřístupňování vysokoškolských kvalifikačních prací, Asociace knihoven vysokých škol ČR},
   date = {2008-12-22},
-  pagetotal = {60}, 
+  pagetotal = {60},
   url = {http://www.evskp.cz/SD/4c.pdf},
   urldate = {2011-02-02}
 }
 
 @BOOK{t01,
-  author = {Borgman, Christine L.}, 
+  author = {Borgman, Christine L.},
   year={2003},
-  title = {From Gutenberg to the global information infrastructure}, 
+  title = {From Gutenberg to the global information infrastructure},
   subtitle = {access to information in the networked world},
   edition= {first},
-  location = {Cambridge (Mass)}, 
+  location = {Cambridge (Mass)},
   publisher = {The MIT Press},
   pagetotal =  {xviii, 324},
-  isbn =  {0-262-52345-0}
+  isbn =  {978-3-16-148410-0}
 }
 
 @INCOLLECTION{t02,
-  author = {Greenberg, David}, 
+  author = {Greenberg, David},
   year = {1998},
   title = {Camel drivers and gatecrashers},
   subtitle = {quality control in the digital research library},
   editor = {Hawkins, B.L and Battin, P},
   booktitle = {The mirage of continuity},
-  booksubtitle = {reconfiguring academic information resources for the 21st  century}, 
-  location = {Washington (D.C.)}, 
-  publisher = {Council on Library and Information Resources; Association of American Universities}, 
+  booksubtitle = {reconfiguring academic information resources for the 21st  century},
+  location = {Washington (D.C.)},
+  publisher = {Council on Library and Information Resources; Association of American Universities},
   pages = {105-116},
   langid = {english}
 }
@@ -57,7 +63,7 @@
   volume =  {11},
   number = {7/8},
   urldate ={2005-08-15},
-  url = {http://www.dlib.org/dlib/july05/lynch/07lynch.html}, 
+  url = {http://www.dlib.org/dlib/july05/lynch/07lynch.html},
   issn = {1082-9873},
   langid = {english}
 }
@@ -83,7 +89,7 @@
   pagetotal = {550},
   location = {Praha},
   series={Pokusná edice},
-  isbn={978-44-55-X},
+  isbn={978-3-16-148410-0},
   url={http://pokus.cz},
   comment={Dostupné také z WWW},
   urldate = {2011-01-12}
@@ -141,15 +147,15 @@
 
 @BOOK{koll,
   author = {Kollmannová, Ludmila and Bubeníková, Libuše and Kopecká, Alena},
-  title = {Angličtina pro samouky}, 
+  title = {Angličtina pro samouky},
   edition = {5},
-  location = {Praha}, 
-  publisher = {Státní pedagogické nakladatelství}, 
-  year = {1977}, 
+  location = {Praha},
+  publisher = {Státní pedagogické nakladatelství},
+  year = {1977},
   pagetotal = {525},
   series = {Učebnice pro samouky},
   number = {4},
-  isbn = {80-04-25663-5}
+  isbn = {978-3-16-148410-0}
 }
 
 @INBOOK{kap,
@@ -187,7 +193,7 @@ editor = {Geniální, Jiří},
 year = {2007},
 location = {Praha},
 publisher = {Academia},
-isbn = {978-222-626-222-2}
+isbn = {978-3-16-148410-0}
 }
 @INCOLLECTION{prispevok,
 crossref = {zbornik},
