bib: ros documentation
Signed-off-by: Filip Lobpreis <f.lobpreis@gmail.com>

--- a/includes/bibliography.bib
+++ b/includes/bibliography.bib
@@ -15,6 +15,12 @@
   urldate = {2022-12-23}
 }
 
+@ONLINE{RosDoc,
+  title = {{ROS2 documentation}},
+  url = {https://docs.ros.org/en/humble/index.html},
+  urldate = {2022-12-23}
+}
+
 @ONLINE{t00,
   editor = {Bratková, Eva},
   editortype={compiler},
