dict: new acronym
Signed-off-by: Filip Lobpreis <f.lobpreis@gmail.com>

--- a/includes/glossary.tex
+++ b/includes/glossary.tex
@@ -1,3 +1,5 @@
 \newacronym{ROS}{ROS}{Robot Operating System}
 \newacronym{IPC}{IPC}{Inter Process Communication}
 \newacronym{LAN}{LAN}{Local Area Network}
+\newacronym{DDS}{DDS}{Data Distribution Service}
+
